Security update: API keys moved to secrets.js

--- a/admin.html
+++ b/admin.html
@@ -313,6 +313,8 @@
     </div>
 
     <!-- Scripts -->
+    <!-- Load secrets.js FIRST before any other scripts that use secrets -->
+    <script src="secrets.js"></script>
     <script src="config.js"></script>
     <script src="admin.js"></script>
 </body>
