--- a/detail.html
+++ b/detail.html
@@ -654,6 +654,8 @@
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     
     <!-- Airtable Integration Scripts -->
+    <!-- Load secrets.js FIRST before any other scripts that use secrets -->
+    <script src="secrets.js"></script>
     <script src="config.js"></script>
     <script src="detail.js"></script>
 </body>
