--- a/favorites.html
+++ b/favorites.html
@@ -105,6 +105,8 @@
     </div>
 
     <!-- Airtable Integration Scripts -->
+    <!-- Load secrets.js FIRST before any other scripts that use secrets -->
+    <script src="secrets.js"></script>
     <script src="config.js"></script>
     <script src="favorites.js"></script>
 </body>
