--- a/index.html
+++ b/index.html
@@ -983,6 +983,8 @@
         updatePriceDisplay('mobile-price-slider', 'mobile-price-slider-value');
     </script>
     <!-- Supabase Integration Scripts -->
+    <!-- Load secrets.js FIRST before any other scripts that use secrets -->
+    <script src="secrets.js"></script>
     <script src="config.js"></script>
     <script src="supabaseData.js"></script>
 </body>
