--- a/login.html
+++ b/login.html
@@ -241,6 +241,8 @@
         </div>
     </div>
 
+    <!-- Load secrets.js FIRST before any other scripts that use secrets -->
+    <script src="secrets.js"></script>
     <script src="config.js"></script>
     <script>
         // Handle account type radio button styling and gallery name field toggle
