--- a/upload.html
+++ b/upload.html
@@ -451,6 +451,8 @@
     </div>
 
     <!-- Supabase Integration Scripts -->
+    <!-- Load secrets.js FIRST before any other scripts that use secrets -->
+    <script src="secrets.js"></script>
     <script src="config.js"></script>
     <script src="upload.js"></script>
 </body>
