--- a/login.html
+++ b/login.html
@@ -349,8 +349,8 @@
 
                 if (error) throw error;
 
-                // Redirect to admin panel or index based on user preference
-                window.location.href = 'admin.html';
+                // Redirect to home page after login
+                window.location.href = 'index.html';
 
             } catch (error) {
                 console.error('Login error:', error);
