refactor: airtable silindi, admin butonu eklendi, upload ve favoriler duzeltildi

--- a/detail.html
+++ b/detail.html
@@ -653,7 +653,7 @@
     <!-- html2canvas for Instagram Story generation -->
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     
-    <!-- Airtable Integration Scripts -->
+    <!-- Supabase Integration Scripts -->
     <!-- Load secrets.js FIRST before any other scripts that use secrets -->
     <script src="secrets.js"></script>
     <script src="config.js"></script>
