--- a/favorites.html
+++ b/favorites.html
@@ -104,7 +104,7 @@
         </div>
     </div>
 
-    <!-- Airtable Integration Scripts -->
+    <!-- Supabase Integration Scripts -->
     <!-- Load secrets.js FIRST before any other scripts that use secrets -->
     <script src="secrets.js"></script>
     <script src="config.js"></script>
